--- a/src/qt/res/bitcoin-qt.rc
+++ b/src/qt/res/bitcoin-qt.rc
@@ -1,4 +1,4 @@
-IDI_ICON1 ICON DISCARDABLE "icons/CapriCoin.ico"
+IDI_ICON1 ICON DISCARDABLE "icons/Capricoin.ico"
 
 #include <windows.h>             // needed for VERSIONINFO
 #include "../../clientversion.h" // holds the needed client version information
@@ -18,14 +18,14 @@ BEGIN
     BEGIN
         BLOCK "040904E4" // U.S. English - multilingual (hex)
         BEGIN
-            VALUE "CompanyName",        "CapriCoin"
-            VALUE "FileDescription",    "CapriCoin-Qt (OSS GUI client for CapriCoin)"
+            VALUE "CompanyName",        "Capricoin"
+            VALUE "FileDescription",    "Capricoin-Qt (OSS GUI client for Capricoin)"
             VALUE "FileVersion",        VER_FILEVERSION_STR
-            VALUE "InternalName",       "CapriCoin-qt"
-            VALUE "LegalCopyright",     "2009-2012 The Bitcoin developers, 2012-2013 The CapriCoin & PPCoin developers"
+            VALUE "InternalName",       "Capricoin-qt"
+            VALUE "LegalCopyright",     "2009-2012 The Bitcoin developers, 2012-2013 The Capricoin & PPCoin developers"
             VALUE "LegalTrademarks1",   "Distributed under the MIT/X11 software license, see the accompanying file COPYING or http://www.opensource.org/licenses/mit-license.php."
-            VALUE "OriginalFilename",   "CapriCoin-qt.exe"
-            VALUE "ProductName",        "CapriCoin-Qt"
+            VALUE "OriginalFilename",   "Capricoin-qt.exe"
+            VALUE "ProductName",        "Capricoin-Qt"
             VALUE "ProductVersion",     VER_PRODUCTVERSION_STR
         END
     END
