--- a/contrib/macdeploy/node-appdmg.json
+++ b/contrib/macdeploy/node-appdmg.json
@@ -7,6 +7,6 @@
   "background": "background.png",
   "contents": [
     { "x": 370, "y": 156, "type": "link", "path": "/Applications" },
-    { "x": 128, "y": 156, "type": "file", "path": "../../OraCoin-Qt.app" }
+    { "x": 128, "y": 156, "type": "file", "path": "../../Capricoin-Qt.app" }
   ]
 }
